@@ -94,6 +94,24 @@ START_TEST (elm_code_text_newline_position_test)
 }
 END_TEST
 
+START_TEST (elm_code_text_leading_whitespace_test)
+{
+   const char *text;
+
+   text = "testing";
+   ck_assert_int_eq(0, elm_code_text_leading_whitespace_length(text, strlen(text)));
+
+   text = "  spaces";
+   ck_assert_int_eq(2, elm_code_text_leading_whitespace_length(text, strlen(text)));
+
+   text = "\t\ttabs";
+   ck_assert_int_eq(2, elm_code_text_leading_whitespace_length(text, strlen(text)));
+
+   text = " \t mix";
+   ck_assert_int_eq(3, elm_code_text_leading_whitespace_length(text, strlen(text)));
+}
+END_TEST
+
 void elm_code_test_text(TCase *tc)
 {
    tcase_add_test(tc, elm_code_text_get_test);
@@ -101,4 +119,5 @@ void elm_code_test_text(TCase *tc)
    tcase_add_test(tc, elm_code_text_contains_test);
    tcase_add_test(tc, elm_code_text_strpos_test);
    tcase_add_test(tc, elm_code_text_newline_position_test);
+   tcase_add_test(tc, elm_code_text_leading_whitespace_test);
 }
